--- a/app/views/beta-sprint-10/public-facing/profession-chartered-accountant-public-tabs.html
+++ b/app/views/beta-sprint-10/public-facing/profession-chartered-accountant-public-tabs.html
@@ -493,7 +493,7 @@
             </h2>
           </div>
           <h2 class="govuk-heading-l">2020</h2>
-          <h3 class="govuk-heading-m">Institute of Chartered Accountants in England and Wales - Route #1</h3>
+          <h3 class="govuk-heading-m">Institute of Chartered Accountants in England and Wales - EEA Route</h3>
           <table class="govuk-table">
             <thead class="govuk-table__head">
               <tr class="govuk-table__row">
@@ -529,7 +529,7 @@
             </tbody>
           </table>
 
-          <h3 class="govuk-heading-m">Institute of Chartered Accountants in England and Wales - Route #2</h3>
+          <h3 class="govuk-heading-m">Institute of Chartered Accountants in England and Wales - International Route</h3>
           <table class="govuk-table">
             <thead class="govuk-table__head">
               <tr class="govuk-table__row">
@@ -565,7 +565,7 @@
             </tbody>
           </table>
 
-          <h3 class="govuk-heading-m">Institute of Chartered Accountants in Scotland - Route #1</h3>
+          <h3 class="govuk-heading-m">Institute of Chartered Accountants in Scotland - EEA Route</h3>
           <table class="govuk-table">
             <thead class="govuk-table__head">
               <tr class="govuk-table__row">
@@ -603,7 +603,7 @@
 
           <h2 class="govuk-heading-l">2019</h2>
           
-          <h3 class="govuk-heading-m">Institute of Chartered Accountants in England and Wales - Route #1</h3>
+          <h3 class="govuk-heading-m">Institute of Chartered Accountants in England and Wales - EEA Route</h3>
           <table class="govuk-table">
             <thead class="govuk-table__head">
               <tr class="govuk-table__row">
@@ -639,7 +639,7 @@
             </tbody>
           </table>
 
-          <h3 class="govuk-heading-m">Institute of Chartered Accountants in England and Wales - Route #2</h3>
+          <h3 class="govuk-heading-m">Institute of Chartered Accountants in England and Wales - International Route</h3>
           <table class="govuk-table">
             <thead class="govuk-table__head">
               <tr class="govuk-table__row">
