--- a/app/views/beta-sprint-10/public-facing/profession-chartered-accountant-public-v0.html
+++ b/app/views/beta-sprint-10/public-facing/profession-chartered-accountant-public-v0.html
@@ -471,7 +471,7 @@
       </h2>
 
       <h2 class="govuk-heading-l">2020</h2>
-      <h3 class="govuk-heading-m">Institute of Chartered Accountants in England and Wales - Route #1</h3>
+      <h3 class="govuk-heading-m">Institute of Chartered Accountants in England and Wales - EEA Route</h3>
       <table class="govuk-table">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
@@ -507,7 +507,7 @@
         </tbody>
       </table>
 
-      <h3 class="govuk-heading-m">Institute of Chartered Accountants in England and Wales - Route #2</h3>
+      <h3 class="govuk-heading-m">Institute of Chartered Accountants in England and Wales - International Route</h3>
       <table class="govuk-table">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
@@ -543,7 +543,7 @@
         </tbody>
       </table>
 
-      <h3 class="govuk-heading-m">Institute of Chartered Accountants in Scotland - Route #1</h3>
+      <h3 class="govuk-heading-m">Institute of Chartered Accountants in Scotland - EEA Route</h3>
       <table class="govuk-table">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
@@ -581,7 +581,7 @@
 
       <h2 class="govuk-heading-l">2019</h2>
       
-      <h3 class="govuk-heading-m">Institute of Chartered Accountants in England and Wales - Route #1</h3>
+      <h3 class="govuk-heading-m">Institute of Chartered Accountants in England and Wales - EEA Route</h3>
       <table class="govuk-table">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
@@ -617,7 +617,7 @@
         </tbody>
       </table>
 
-      <h3 class="govuk-heading-m">Institute of Chartered Accountants in England and Wales - Route #2</h3>
+      <h3 class="govuk-heading-m">Institute of Chartered Accountants in England and Wales - International Route</h3>
       <table class="govuk-table">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
