--- a/app/views/beta-sprint-10/public-facing/recognition-decision-data-chartered-accountant-2019.html
+++ b/app/views/beta-sprint-10/public-facing/recognition-decision-data-chartered-accountant-2019.html
@@ -44,7 +44,7 @@
 
       <h2 class="govuk-heading-l">2019</h2>
 
-      <h3 class="govuk-heading-m" id="regulator-1">Institute of Chartered Accountants in England and Wales - Route #1</h3>
+      <h3 class="govuk-heading-m" id="regulator-1">Institute of Chartered Accountants in England and Wales - EEA Route</h3>
       <table class="govuk-table">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
@@ -57,7 +57,7 @@
         </thead>
         <tbody class="govuk-table__body">
           <tr class="govuk-table__row">
-            <td class="govuk-table__cell">France</td>
+            <td class="govuk-table__cell">Germany</td>
             <td class="govuk-table__cell">3</td>
             <td class="govuk-table__cell">1</td>
             <td class="govuk-table__cell">0</td>
@@ -71,7 +71,7 @@
             <td class="govuk-table__cell">0</td>
           </tr>
           <tr class="govuk-table__row">
-            <td class="govuk-table__cell">Australia</td>
+            <td class="govuk-table__cell">Poland</td>
             <td class="govuk-table__cell">0</td>
             <td class="govuk-table__cell">1</td>
             <td class="govuk-table__cell">0</td>
@@ -80,7 +80,7 @@
         </tbody>
       </table>
 
-      <h3 class="govuk-heading-m">Institute of Chartered Accountants in England and Wales - Route #2</h3>
+      <h3 class="govuk-heading-m">Institute of Chartered Accountants in England and Wales - International Route</h3>
       <table class="govuk-table">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
@@ -93,22 +93,8 @@
         </thead>
         <tbody class="govuk-table__body">
           <tr class="govuk-table__row">
-            <td class="govuk-table__cell">France</td>
+            <td class="govuk-table__cell">Brazil</td>
             <td class="govuk-table__cell">3</td>
-            <td class="govuk-table__cell">1</td>
-            <td class="govuk-table__cell">0</td>
-            <td class="govuk-table__cell">0</td>
-          </tr>
-          <tr class="govuk-table__row">
-            <td class="govuk-table__cell">Italy</td>
-            <td class="govuk-table__cell">3</td>
-            <td class="govuk-table__cell">0</td>
-            <td class="govuk-table__cell">1</td>
-            <td class="govuk-table__cell">0</td>
-          </tr>
-          <tr class="govuk-table__row">
-            <td class="govuk-table__cell">Australia</td>
-            <td class="govuk-table__cell">0</td>
             <td class="govuk-table__cell">1</td>
             <td class="govuk-table__cell">0</td>
             <td class="govuk-table__cell">0</td>
