--- a/app/views/beta-sprint-10/public-facing/recognition-decision-data-chartered-accountant-2020.html
+++ b/app/views/beta-sprint-10/public-facing/recognition-decision-data-chartered-accountant-2020.html
@@ -45,7 +45,7 @@
 
       <h2 class="govuk-heading-l">2020</h2>
 
-      <h3 class="govuk-heading-m" id="regulator-1">Institute of Chartered Accountants in England and Wales - Route #1</h3>
+      <h3 class="govuk-heading-m" id="regulator-1">Institute of Chartered Accountants in England and Wales - EEA Route</h3>
       <table class="govuk-table rpr-decision-data__table-container">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
@@ -72,7 +72,7 @@
             <td class="govuk-table__cell">0</td>
           </tr>
           <tr class="govuk-table__row">
-            <td class="govuk-table__cell">Australia</td>
+            <td class="govuk-table__cell">Spain</td>
             <td class="govuk-table__cell">0</td>
             <td class="govuk-table__cell">1</td>
             <td class="govuk-table__cell">0</td>
@@ -81,7 +81,7 @@
         </tbody>
       </table>
 
-      <h3 class="govuk-heading-m">Institute of Chartered Accountants in England and Wales - Route #2</h3>
+      <h3 class="govuk-heading-m">Institute of Chartered Accountants in England and Wales - International Route</h3>
       <table class="govuk-table rpr-decision-data__table-container">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
@@ -94,21 +94,21 @@
         </thead>
         <tbody class="govuk-table__body">
           <tr class="govuk-table__row">
-            <td class="govuk-table__cell">France</td>
-            <td class="govuk-table__cell">3</td>
-            <td class="govuk-table__cell">1</td>
-            <td class="govuk-table__cell">0</td>
-            <td class="govuk-table__cell">0</td>
-          </tr>
-          <tr class="govuk-table__row">
-            <td class="govuk-table__cell">Italy</td>
-            <td class="govuk-table__cell">3</td>
-            <td class="govuk-table__cell">0</td>
-            <td class="govuk-table__cell">1</td>
-            <td class="govuk-table__cell">0</td>
-          </tr>
-          <tr class="govuk-table__row">
             <td class="govuk-table__cell">Australia</td>
+            <td class="govuk-table__cell">3</td>
+            <td class="govuk-table__cell">1</td>
+            <td class="govuk-table__cell">0</td>
+            <td class="govuk-table__cell">0</td>
+          </tr>
+          <tr class="govuk-table__row">
+            <td class="govuk-table__cell">Switzerland</td>
+            <td class="govuk-table__cell">3</td>
+            <td class="govuk-table__cell">0</td>
+            <td class="govuk-table__cell">1</td>
+            <td class="govuk-table__cell">0</td>
+          </tr>
+          <tr class="govuk-table__row">
+            <td class="govuk-table__cell">United States of America</td>
             <td class="govuk-table__cell">0</td>
             <td class="govuk-table__cell">1</td>
             <td class="govuk-table__cell">0</td>
@@ -117,7 +117,7 @@
         </tbody>
       </table>
 
-      <h3 class="govuk-heading-m" id="regulator-2">Institute of Chartered Accountants in Scotland - Route #1</h3>
+      <h3 class="govuk-heading-m" id="regulator-2">Institute of Chartered Accountants in Scotland - EEA Route</h3>
       <table class="govuk-table rpr-decision-data__table-container">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
@@ -130,7 +130,7 @@
         </thead>
         <tbody class="govuk-table__body">
           <tr class="govuk-table__row">
-            <td class="govuk-table__cell">France</td>
+            <td class="govuk-table__cell">Denmark</td>
             <td class="govuk-table__cell">3</td>
             <td class="govuk-table__cell">1</td>
             <td class="govuk-table__cell">0</td>
@@ -144,7 +144,7 @@
             <td class="govuk-table__cell">0</td>
           </tr>
           <tr class="govuk-table__row">
-            <td class="govuk-table__cell">Australia</td>
+            <td class="govuk-table__cell">Ireland</td>
             <td class="govuk-table__cell">0</td>
             <td class="govuk-table__cell">1</td>
             <td class="govuk-table__cell">0</td>
