--- a/app/views/beta-sprint-10/regulator-scotland/recognition-decision-data-chartered-accountant-2020.html
+++ b/app/views/beta-sprint-10/regulator-scotland/recognition-decision-data-chartered-accountant-2020.html
@@ -89,8 +89,8 @@
         ]
       }) }}
 
-      <h3 class="govuk-heading-m">Route #1</h3>
       <table class="govuk-table rpr-decision-data__table-container">
+        <caption class="govuk-table__caption govuk-table__caption--l">EEA Route</caption>
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
             <th scope="col" class="govuk-table__header">Country of qualification</th>
@@ -102,7 +102,7 @@
         </thead>
         <tbody class="govuk-table__body">
           <tr class="govuk-table__row">
-            <td class="govuk-table__cell">France</td>
+            <td class="govuk-table__cell">Denmark</td>
             <td class="govuk-table__cell">3</td>
             <td class="govuk-table__cell">1</td>
             <td class="govuk-table__cell">0</td>
@@ -116,7 +116,7 @@
             <td class="govuk-table__cell">0</td>
           </tr>
           <tr class="govuk-table__row">
-            <td class="govuk-table__cell">Australia</td>
+            <td class="govuk-table__cell">Ireland</td>
             <td class="govuk-table__cell">0</td>
             <td class="govuk-table__cell">1</td>
             <td class="govuk-table__cell">0</td>
@@ -159,8 +159,8 @@
               <input name="decision-data-profession" id="decision-data-profession" value="Chartered Accountant" type="hidden">
               <input name="decision-data-year" id="decision-data-year" value="2020" type="hidden">
               
-              <input name="decision-data-route-1" id="decision-data-route-1" value="Route 1" type="hidden">
-              <input name="decision-data-route-1-country-1" id="decision-data-route-1-country-1" value="France" type="hidden">
+              <input name="decision-data-route-1" id="decision-data-route-1" value="EEA Route" type="hidden">
+              <input name="decision-data-route-1-country-1" id="decision-data-route-1-country-1" value="Denmark" type="hidden">
               <input name="decision-data-route-1-country-1-yes" id="decision-data-route-1-country-1-yes" value="3" type="hidden">
               <input name="decision-data-route-1-country-1-yes-2" id="decision-data-route-1-country-1-yes-2" value="1" type="hidden">
               <input name="decision-data-route-1-country-1-no" id="decision-data-route-1-country-1-no" value="0" type="hidden">
@@ -172,30 +172,12 @@
               <input name="decision-data-route-1-country-2-no" id="decision-data-route-1-country-2-no" value="1" type="hidden">
               <input name="decision-data-route-1-country-2-no-2" id="decision-data-route-1-country-2-no-2" value="0" type="hidden">
 
-              <input name="decision-data-route-1-country-3" id="decision-data-route-1-country-3" value="United States of America" type="hidden">
+              <input name="decision-data-route-1-country-3" id="decision-data-route-1-country-3" value="Ireland" type="hidden">
               <input name="decision-data-route-1-country-3-yes" id="decision-data-route-1-country-3-yes" value="0" type="hidden">
               <input name="decision-data-route-1-country-3-yes-2" id="decision-data-route-1-country-3-yes-2" value="1" type="hidden">
               <input name="decision-data-route-1-country-3-no" id="decision-data-route-1-country-3-no" value="0" type="hidden">
               <input name="decision-data-route-1-country-3-no-2" id="decision-data-route-1-country-3-no-2" value="0" type="hidden">
 
-              <input name="decision-data-route-2" id="decision-data-route-2" value="Route 2" type="hidden">
-              <input name="decision-data-route-2-country-1" id="decision-data-route-2-country-1" value="France" type="hidden">
-              <input name="decision-data-route-2-country-1-yes" id="decision-data-route-2-country-1-yes" value="3" type="hidden">
-              <input name="decision-data-route-2-country-1-yes-2" id="decision-data-route-2-country-1-yes-2" value="1" type="hidden">
-              <input name="decision-data-route-2-country-1-no" id="decision-data-route-2-country-1-no" value="0" type="hidden">
-              <input name="decision-data-route-2-country-1-no-2" id="decision-data-route-2-country-1-no-2" value="0" type="hidden">
-
-              <input name="decision-data-route-2-country-2" id="decision-data-route-2-country-2" value="Italy" type="hidden">
-              <input name="decision-data-route-2-country-2-yes" id="decision-data-route-2-country-2-yes" value="3" type="hidden">
-              <input name="decision-data-route-2-country-2-yes-2" id="decision-data-route-2-country-2-yes-2" value="0" type="hidden">
-              <input name="decision-data-route-2-country-2-no" id="decision-data-route-2-country-2-no" value="1" type="hidden">
-              <input name="decision-data-route-2-country-2-no-2" id="decision-data-route-2-country-2-no-2" value="0" type="hidden">
-
-              <input name="decision-data-route-2-country-3" id="decision-data-route-2-country-3" value="United States of America" type="hidden">
-              <input name="decision-data-route-2-country-3-yes" id="decision-data-route-2-country-3-yes" value="0" type="hidden">
-              <input name="decision-data-route-2-country-3-yes-2" id="decision-data-route-2-country-3-yes-2" value="1" type="hidden">
-              <input name="decision-data-route-2-country-3-no" id="decision-data-route-2-country-3-no" value="0" type="hidden">
-              <input name="decision-data-route-2-country-3-no-2" id="decision-data-route-2-country-3-no-2" value="0" type="hidden">
 
               <button class="govuk-button govuk-button--secondary" formaction="recognition-decision-data-chartered-accountant-2020-edit">Edit data</button>
             </li>
