--- a/app/views/beta-sprint-10/public-facing/recognition-decision-data-chartered-accountant-v1.html
+++ b/app/views/beta-sprint-10/public-facing/recognition-decision-data-chartered-accountant-v1.html
@@ -72,7 +72,7 @@
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
       <h2 class="govuk-heading-l" id="year-2020">2020</h2>
-      <h3 class="govuk-heading-m">Institute of Chartered Accountants in England and Wales - Route #1</h3>
+      <h3 class="govuk-heading-m">Institute of Chartered Accountants in England and Wales - EEA Route</h3>
       <table class="govuk-table">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
@@ -108,7 +108,7 @@
         </tbody>
       </table>
 
-      <h3 class="govuk-heading-m">Institute of Chartered Accountants in England and Wales - Route #2</h3>
+      <h3 class="govuk-heading-m">Institute of Chartered Accountants in England and Wales - International Route</h3>
       <table class="govuk-table">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
@@ -144,7 +144,7 @@
         </tbody>
       </table>
 
-      <h3 class="govuk-heading-m">Institute of Chartered Accountants in Scotland - Route #1</h3>
+      <h3 class="govuk-heading-m">Institute of Chartered Accountants in Scotland - EEA Route</h3>
       <table class="govuk-table">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
@@ -182,7 +182,7 @@
 
       <h2 class="govuk-heading-l" id="year-2019">2019</h2>
       
-      <h3 class="govuk-heading-m">Institute of Chartered Accountants in England and Wales - Route #1</h3>
+      <h3 class="govuk-heading-m">Institute of Chartered Accountants in England and Wales - EEA Route</h3>
       <table class="govuk-table">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
@@ -218,7 +218,7 @@
         </tbody>
       </table>
 
-      <h3 class="govuk-heading-m">Institute of Chartered Accountants in England and Wales - Route #2</h3>
+      <h3 class="govuk-heading-m">Institute of Chartered Accountants in England and Wales - International Route</h3>
       <table class="govuk-table">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
