--- a/app/views/beta-sprint-10/regulator-england-and-wales/recognition-decision-data-chartered-accountant-2019.html
+++ b/app/views/beta-sprint-10/regulator-england-and-wales/recognition-decision-data-chartered-accountant-2019.html
@@ -89,7 +89,7 @@
       }) }}
 
       <table class="govuk-table rpr-decision-data__table-container">
-        <caption class="govuk-table__caption govuk-table__caption--l">Route 1</caption>
+        <caption class="govuk-table__caption govuk-table__caption--l">EEA Route</caption>
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
             <th scope="col" class="govuk-table__header">Country of qualification</th>
@@ -115,7 +115,7 @@
             <td class="govuk-table__cell">0</td>
           </tr>
           <tr class="govuk-table__row">
-            <td class="govuk-table__cell">Australia</td>
+            <td class="govuk-table__cell">Poland</td>
             <td class="govuk-table__cell">0</td>
             <td class="govuk-table__cell">1</td>
             <td class="govuk-table__cell">0</td>
@@ -125,7 +125,7 @@
       </table>
 
       <table class="govuk-table rpr-decision-data__table-container">
-        <caption class="govuk-table__caption govuk-table__caption--l">Route 2</caption>
+        <caption class="govuk-table__caption govuk-table__caption--l">International Route</caption>
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
             <th scope="col" class="govuk-table__header">Country of qualification</th>
@@ -181,7 +181,7 @@
                 <input name="decision-data-profession" id="decision-data-profession" value="Chartered Accountant" type="hidden">
                 <input name="decision-data-year" id="decision-data-year" value="2019" type="hidden">
                 
-                <input name="decision-data-route-1" id="decision-data-route-1" value="Route 1" type="hidden">
+                <input name="decision-data-route-1" id="decision-data-route-1" value="EEA Route" type="hidden">
                 <input name="decision-data-route-1-country-1" id="decision-data-route-1-country-1" value="Germany" type="hidden">
                 <input name="decision-data-route-1-country-1-yes" id="decision-data-route-1-country-1-yes" value="3" type="hidden">
                 <input name="decision-data-route-1-country-1-yes-2" id="decision-data-route-1-country-1-yes-2" value="1" type="hidden">
@@ -194,13 +194,13 @@
                 <input name="decision-data-route-1-country-2-no" id="decision-data-route-1-country-2-no" value="1" type="hidden">
                 <input name="decision-data-route-1-country-2-no-2" id="decision-data-route-1-country-2-no-2" value="0" type="hidden">
 
-                <input name="decision-data-route-1-country-3" id="decision-data-route-1-country-3" value="United States of America" type="hidden">
+                <input name="decision-data-route-1-country-3" id="decision-data-route-1-country-3" value="Poland" type="hidden">
                 <input name="decision-data-route-1-country-3-yes" id="decision-data-route-1-country-3-yes" value="0" type="hidden">
                 <input name="decision-data-route-1-country-3-yes-2" id="decision-data-route-1-country-3-yes-2" value="1" type="hidden">
                 <input name="decision-data-route-1-country-3-no" id="decision-data-route-1-country-3-no" value="0" type="hidden">
                 <input name="decision-data-route-1-country-3-no-2" id="decision-data-route-1-country-3-no-2" value="0" type="hidden">
 
-                <input name="decision-data-route-2" id="decision-data-route-2" value="Route 2" type="hidden">
+                <input name="decision-data-route-2" id="decision-data-route-2" value="International Route" type="hidden">
                 <input name="decision-data-route-2-country-1" id="decision-data-route-2-country-1" value="Brazil" type="hidden">
                 <input name="decision-data-route-2-country-1-yes" id="decision-data-route-2-country-1-yes" value="0" type="hidden">
                 <input name="decision-data-route-2-country-1-yes-2" id="decision-data-route-2-country-1-yes-2" value="3" type="hidden">
