--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -40,6 +40,19 @@ $tiny-screen: 340px;
   }
 }
 
+.rpr-internal__details-page-file-download {
+  margin-top: 2em;
+}
+
+.rpr-internal__details-page-file-download-link {
+  display: block;
+  background-image: url(/public/images/icon-file-download.svg);
+  background-repeat: no-repeat;
+  background-size: 40px 40px;
+  min-height: 2.5em;
+  padding: 0 0 0 50px;
+}
+
 .rpr-listing__results-found--mobile {
   display: none;
   @media screen and (max-width: $small-screen) {
