--- a/app/views/index.html
+++ b/app/views/index.html
@@ -27,6 +27,16 @@
 
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
+      <h2 class="govuk-heading-l" id="beta-sprint-11">
+        Beta sprint 11
+      </h2>
+
+      <ul class="govuk-list govuk-list--bullet">
+        <li><a href="beta-sprint-11/regulator-england-and-wales/recognition-decision-data-chartered-accountant-2020">Revised data set page (single)</a></li>
+      </ul>
+
+      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
       <h2 class="govuk-heading-l" id="beta-sprint-10">
         Beta sprint 10
       </h2>
