--- a/app/views/beta-sprint-11/regulator-england-and-wales/recognition-decision-data-chartered-accountant-2020.html
+++ b/app/views/beta-sprint-11/regulator-england-and-wales/recognition-decision-data-chartered-accountant-2020.html
@@ -98,6 +98,7 @@
             <th scope="col" class="govuk-table__header">Yes (after compensatory measure)</th>
             <th scope="col" class="govuk-table__header">No</th>
             <th scope="col" class="govuk-table__header">No (after compensatory measure)</th>
+            <th scope="col" class="govuk-table__header">Total</th>
           </tr>
         </thead>
         <tbody class="govuk-table__body">
@@ -107,6 +108,7 @@
             <td class="govuk-table__cell">1</td>
             <td class="govuk-table__cell">0</td>
             <td class="govuk-table__cell">0</td>
+            <td class="govuk-table__cell"><strong>4</strong></td>
           </tr>
           <tr class="govuk-table__row">
             <td class="govuk-table__cell">Italy</td>
@@ -114,6 +116,7 @@
             <td class="govuk-table__cell">0</td>
             <td class="govuk-table__cell">1</td>
             <td class="govuk-table__cell">0</td>
+            <td class="govuk-table__cell"><strong>4</strong></td>
           </tr>
           <tr class="govuk-table__row">
             <td class="govuk-table__cell">Spain</td>
@@ -121,6 +124,7 @@
             <td class="govuk-table__cell">1</td>
             <td class="govuk-table__cell">0</td>
             <td class="govuk-table__cell">0</td>
+            <td class="govuk-table__cell"><strong>1</strong></td>
           </tr>
         </tbody>
       </table>
@@ -134,6 +138,7 @@
             <th scope="col" class="govuk-table__header">Yes (after compensatory measure)</th>
             <th scope="col" class="govuk-table__header">No</th>
             <th scope="col" class="govuk-table__header">No (after compensatory measure)</th>
+            <th scope="col" class="govuk-table__header">Total</th>
           </tr>
         </thead>
         <tbody class="govuk-table__body">
@@ -143,6 +148,7 @@
             <td class="govuk-table__cell">1</td>
             <td class="govuk-table__cell">0</td>
             <td class="govuk-table__cell">0</td>
+            <td class="govuk-table__cell"><strong>4</strong></td>
           </tr>
           <tr class="govuk-table__row">
             <td class="govuk-table__cell">Switzerland</td>
@@ -150,6 +156,7 @@
             <td class="govuk-table__cell">0</td>
             <td class="govuk-table__cell">1</td>
             <td class="govuk-table__cell">0</td>
+            <td class="govuk-table__cell"><strong>4</strong></td>
           </tr>
           <tr class="govuk-table__row">
             <td class="govuk-table__cell">United States of America</td>
@@ -157,6 +164,7 @@
             <td class="govuk-table__cell">1</td>
             <td class="govuk-table__cell">0</td>
             <td class="govuk-table__cell">0</td>
+            <td class="govuk-table__cell"><strong>1</strong></td>
           </tr>
         </tbody>
       </table>
