adding public view

--- a/app/views/beta-sprint-11/public-facing/recognition-decision-data-chartered-accountant-2020.html
+++ b/app/views/beta-sprint-11/public-facing/recognition-decision-data-chartered-accountant-2020.html
@@ -49,34 +49,20 @@
       <table class="govuk-table rpr-decision-data__table-container">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
-            <th scope="col" class="govuk-table__header">Country of qualification</th>
             <th scope="col" class="govuk-table__header">Yes</th>
             <th scope="col" class="govuk-table__header">Yes (after compensatory measure)</th>
             <th scope="col" class="govuk-table__header">No</th>
             <th scope="col" class="govuk-table__header">No (after compensatory measure)</th>
+            <th scope="col" class="govuk-table__header"><strong>Total</strong></th>
           </tr>
         </thead>
         <tbody class="govuk-table__body">
           <tr class="govuk-table__row">
-            <td class="govuk-table__cell">France</td>
-            <td class="govuk-table__cell">3</td>
+            <td class="govuk-table__cell">6</td>
+            <td class="govuk-table__cell">2</td>
             <td class="govuk-table__cell">1</td>
             <td class="govuk-table__cell">0</td>
-            <td class="govuk-table__cell">0</td>
-          </tr>
-          <tr class="govuk-table__row">
-            <td class="govuk-table__cell">Italy</td>
-            <td class="govuk-table__cell">3</td>
-            <td class="govuk-table__cell">0</td>
-            <td class="govuk-table__cell">1</td>
-            <td class="govuk-table__cell">0</td>
-          </tr>
-          <tr class="govuk-table__row">
-            <td class="govuk-table__cell">Spain</td>
-            <td class="govuk-table__cell">0</td>
-            <td class="govuk-table__cell">1</td>
-            <td class="govuk-table__cell">0</td>
-            <td class="govuk-table__cell">0</td>
+            <td class="govuk-table__cell"><strong>9</strong></td>
           </tr>
         </tbody>
       </table>
@@ -85,34 +71,20 @@
       <table class="govuk-table rpr-decision-data__table-container">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
-            <th scope="col" class="govuk-table__header">Country of qualification</th>
             <th scope="col" class="govuk-table__header">Yes</th>
             <th scope="col" class="govuk-table__header">Yes (after compensatory measure)</th>
             <th scope="col" class="govuk-table__header">No</th>
             <th scope="col" class="govuk-table__header">No (after compensatory measure)</th>
+            <th scope="col" class="govuk-table__header"><strong>Total</strong></th>
           </tr>
         </thead>
         <tbody class="govuk-table__body">
           <tr class="govuk-table__row">
-            <td class="govuk-table__cell">Australia</td>
-            <td class="govuk-table__cell">3</td>
+            <td class="govuk-table__cell">4</td>
+            <td class="govuk-table__cell">2</td>
             <td class="govuk-table__cell">1</td>
-            <td class="govuk-table__cell">0</td>
-            <td class="govuk-table__cell">0</td>
-          </tr>
-          <tr class="govuk-table__row">
-            <td class="govuk-table__cell">Switzerland</td>
-            <td class="govuk-table__cell">3</td>
-            <td class="govuk-table__cell">0</td>
-            <td class="govuk-table__cell">1</td>
-            <td class="govuk-table__cell">0</td>
-          </tr>
-          <tr class="govuk-table__row">
-            <td class="govuk-table__cell">United States of America</td>
-            <td class="govuk-table__cell">0</td>
-            <td class="govuk-table__cell">1</td>
-            <td class="govuk-table__cell">0</td>
-            <td class="govuk-table__cell">0</td>
+            <td class="govuk-table__cell">4</td>
+            <td class="govuk-table__cell"><strong>11</strong></td>
           </tr>
         </tbody>
       </table>
@@ -121,34 +93,20 @@
       <table class="govuk-table rpr-decision-data__table-container">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
-            <th scope="col" class="govuk-table__header">Country of qualification</th>
             <th scope="col" class="govuk-table__header">Yes</th>
             <th scope="col" class="govuk-table__header">Yes (after compensatory measure)</th>
             <th scope="col" class="govuk-table__header">No</th>
             <th scope="col" class="govuk-table__header">No (after compensatory measure)</th>
+            <th scope="col" class="govuk-table__header"><strong>Total</strong></th>
           </tr>
         </thead>
         <tbody class="govuk-table__body">
           <tr class="govuk-table__row">
-            <td class="govuk-table__cell">Denmark</td>
+            <td class="govuk-table__cell">2</td>
+            <td class="govuk-table__cell">2</td>
+            <td class="govuk-table__cell">1</td>
             <td class="govuk-table__cell">3</td>
-            <td class="govuk-table__cell">1</td>
-            <td class="govuk-table__cell">0</td>
-            <td class="govuk-table__cell">0</td>
-          </tr>
-          <tr class="govuk-table__row">
-            <td class="govuk-table__cell">Italy</td>
-            <td class="govuk-table__cell">3</td>
-            <td class="govuk-table__cell">0</td>
-            <td class="govuk-table__cell">1</td>
-            <td class="govuk-table__cell">0</td>
-          </tr>
-          <tr class="govuk-table__row">
-            <td class="govuk-table__cell">Ireland</td>
-            <td class="govuk-table__cell">0</td>
-            <td class="govuk-table__cell">1</td>
-            <td class="govuk-table__cell">0</td>
-            <td class="govuk-table__cell">0</td>
+            <td class="govuk-table__cell"><strong>8</strong></td>
           </tr>
         </tbody>
       </table>
