--- a/app/views/beta-sprint-11/regulator-england-and-wales/recognition-decision-data-chartered-accountant-2020.html
+++ b/app/views/beta-sprint-11/regulator-england-and-wales/recognition-decision-data-chartered-accountant-2020.html
@@ -126,6 +126,14 @@
             <td class="govuk-table__cell">0</td>
             <td class="govuk-table__cell"><strong>1</strong></td>
           </tr>
+          <tr class="govuk-table__row">
+            <td class="govuk-table__cell"><strong>All countries</strong></td>
+            <td class="govuk-table__cell">6</td>
+            <td class="govuk-table__cell">2</td>
+            <td class="govuk-table__cell">1</td>
+            <td class="govuk-table__cell">0</td>
+            <td class="govuk-table__cell"><strong>9</strong></td>
+          </tr>
         </tbody>
       </table>
 
