--- a/app/views/index.html
+++ b/app/views/index.html
@@ -33,6 +33,7 @@
 
       <ul class="govuk-list govuk-list--bullet">
         <li><a href="beta-sprint-11/regulator-england-and-wales/recognition-decision-data-chartered-accountant-2020">Revised data set page (single)</a></li>
+        <li><a href="beta-sprint-11/public-facing/recognition-decision-data-chartered-accountant-2020">Public facing data set</a></li>
       </ul>
 
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
